--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 	width: 300px;
 	height: 200px;
 	padding-bottom: .8em;
-	border: 1px solid #DCDCDC;
+	border: 1px solid orange;
 	margin-bottom: 1em;
 }
 
